# soltax

./: .env.example  .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml  index.html
crates/app/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: main.rs
crates/tax/: Cargo.toml
crates/tax/src/: events.rs  fifo.rs  filter.rs  lib.rs
